--- a/LazySsh/res/values/strings.xml
+++ b/LazySsh/res/values/strings.xml
@@ -1,8 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Lazy Ssh</string>
+    <string name="app_name">Lazy ssh</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_poweroff_fragment">PowerOff NAS</string>
+    <string name="title_splash_fragment">Lazy SSH</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="action_exit">Exit app</string>
+    <string name="button_poweroff">PowerOff your NAS</string>
+    <string name="drawer_open">Choose shortcut</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="splash_text">Shortcust\nfor\nlazy sysadmins\n\npick your shortcut in the nav drawer</string>
+    
+    <string name="message_connecting">Attempting ssh connection&#8230;\n\n</string>
+    <string name="message_command_sent">PowerOff command sent.\n\n</string>
+    <string name="message_setup_connection">Setting up connection&#8230;\n</string>
+    <string name="message_connect">Connecting&#8230;\n</string>
+    <string name="message_sending_command">Sending command&#8230;\n</string>
+    <string name="message_finished">Finished.\n</string>
+    
+    <string name="pref_nas_ip_address_title">NAS IP address</string>
+    <string name="pref_nas_ssh_username_title">SSH username</string>
+    <string name="pref_nas_ssh_password_title">SSH password</string>
+    <string name="pref_nas_ssh_port_title">SSH port</string>
+    <string name="pref_nas_command_title">Command to send</string>
+    <string name="pref_network_title">Network</string>
+    <string name="pref_advanced_title">Advanced settings</string>
+    
+    <string name="pref_nas_ip_address_default">192.168.0.1</string>
+    <string name="pref_nas_ssh_username_default">admin</string>
+    <string name="pref_nas_ssh_password_default">password</string>
+    <string name="pref_nas_ssh_port_default">22</string>
+    <string name="pref_nas_command_default">/sbin/poweroff</string>
 
 </resources>
