--- a/LazySsh/res/values/strings.xml
+++ b/LazySsh/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_poweroff_fragment">PowerOff NAS</string>
     <string name="title_splash_fragment">Take it easy, man</string>
     <string name="title_wake_on_lan_fragment">Wake On LAN</string>
+    <string name="action_poweroff">PowerOff NAS</string>
     
     <string name="action_settings">Settings</string>
     <string name="action_exit">Exit app</string>
